# USV-robotics

./: README
DPfloatover/: README  test.cpp
DPfloatover/QT/: dataviewer.cpp  dataviewer.h  display2ddialog.cpp  display2ddialog.h  display2ddialog.ui  gamepadmonitor.cpp  gamepadmonitor.h  globalvar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myplottest.pro  pntest.h  qcustomplot.cpp  qcustomplot.h  thrusterdiag.cpp  thrusterdiag.h  thrusterdiag.ui
DPfloatover/client_linux/: mount.sh  unmount.sh  upload2pi.sh
DPfloatover/client_linux/example/: simplesocketclient.cpp
DPfloatover/client_linux/include/: tcpclient.h
DPfloatover/example/: CMakeLists.txt  test_looop.cpp  test_netandsql.cpp  test_threadloop.cpp
DPfloatover/gamepad/example/: test  test.cc  test.cpp
DPfloatover/gamepad/include/: joystick.h
DPfloatover/gamepad/src/: joystick.cpp
DPfloatover/include/: Loop.h  constants.h  realtimedata.h  tcp_threaded_Loop.h  threaded_Loop.h
DPfloatover/motioncapture/example/: RTClientExample.cpp  testmotioncapture.cpp
DPfloatover/motioncapture/include/: RTPacket.h  RTProtocol.h  motioncapture.h  qtmInput.h  qtmMarkup.h  qtmNetwork.h  qtmOperations.h  qtmOutput.h
DPfloatover/motioncapture/src/: RTPacket.cpp  RTProtocol.cpp  qtmMarkup.cpp  qtmNetwork.cpp  qtmOperations.cpp  qtmOutput.cpp
DPfloatover/network/example/: pntest.cpp
DPfloatover/network/include/: crccheck.h  datapack.h  pnd_test.h  pnserver_t.h  tcpserver.h  tcpserver_t.h
DPfloatover/network/libcrc/: testall  tstcrc
DPfloatover/network/src/: crccheck.c  datapack.c  pnd_test_helper.c  pnd_test_iob_core.cpp  tcpserver.c
DPfloatover/sql/example/: dbfile.db  testcppsqlite.cpp
DPfloatover/sql/src/: database.c
DPfloatover/src/: loop.c
SQLite/example/: CMakeLists.txt  CMakeLists.txt2  dbconnect.c  dbdelete.c  dbinsert.c  dbselect.c  dbupdate.c  file.txt  mydbtest.cpp  out.csv  savefile.cpp  savefile.h  tablecreate.c
SQLite/include/: constants.h  database.h
concurrent/: HelloFork.c  forkexample.c  threadsimple.cpp
concurrent/26-parallelism/: psum-array  psum-local  psum-local.c
concurrent/terminate_thread_linux/: kill_cpp_thread.cpp  testthreadclass.cpp  threadclass.h
network/example/: CMakeLists.txt  c_testcrccheck.c  c_testdatapack.c  c_testtcpclient.c  c_testtcpserver.c  client.c  cpp_testcrccheck.cpp  cpp_testdatapack.cpp  cpp_testholenet.cpp  cpp_testpackandclient.cpp  cpp_testtcpclient.cpp  cpp_testtcpserver.cpp  myclient.c  pack2  pack2.c  pack2b.c  selectserver.c  selectserverf.c  server.c  testlog.cpp
network/include/: crccheck.h  datapack.h  log.h  tcpclient.h  tcpserver.h
network/src/: datapack.c  tcpclient.c  tcpserver.c
timer/: main.c  test_timer  timecounter.hpp  timer.c
(+92 files in other folders)
